Admin logo and theme palette bg

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,14 @@
 
 .test {
-  color: red;
+  color: #df6919;
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+
+  .logo {
+    width: 50px;
+    margin-left: 10px;
+  }
 }
