Convert to redux to persistent

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -50,6 +50,7 @@ $color-support-3: #9E58FF;
 .sidebar-header {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 
   .logo {
     width: 50px;
